# goofish-v2

./: .gitmodules  README.md  cli.py  main.py  pyproject.toml  requirements.txt  server.py  test_im.py
ai/: __init__.py  error.py
api/: __init__.py  agiso.py  ctrip.py  error.py  types.py
captcha/: __init__.py
cookies/: agiso.json  ctrip.json  goofish.json
db/: __init__.py
helpers/: __init__.py  agiso.py  base.py  ctrip.py  error.py  goofish.py
im/: __init__.py  types.py
report/: __init__.py
route/: __init__.py  auth.py  config.py  depends.py  filter.py  item.py  lifespan.py  log.py  midware.py  sche.py  task.py  types.py  upload.py  utils.py
templates/: __init__.py
