[project]
name = "goofishv2"
version = "0.1.0"
description = "Goofish system v2"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiocache>=0.12.3",
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.13",
    "fastapi>=0.115.11",
    "minio>=7.2.15",
    "motor>=3.7.0",
    "passlib[bcrypt]>=1.7.4",
    "playwright>=1.50.0",
    "pydantic>=2.10.6",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.1",
    "structlog>=25.1.0",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.115.11",
]
